<resources>
    <string name="app_name">digipic</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_middle_name">Middle name</string>
    <string name="hint_last_name">Last name</string>
    <string name="logo">Logo</string>
    <string name="back">Back</string>
    <string name="test_your_knowledge">Test Your Knowledge!</string>
    <string name="smart_quiz">Smart Quiz</string>
    <string name="customized">Customized</string>
    <string name="prompt">Select the preferred test below to practice!</string>
    <string name="types_of_angle_shots">Types of Angle Shots</string>
    <string name="types_of_camera_techniques">Types of Camera Techniques</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="question_limit">Number of questions limit: 20</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="summary">20 Questions / 92 possible</string>
    <string name="start">START</string>
    <string name="home">Home</string>
    <string name="challenges">Challenges</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="delete_account">Delete Account</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="feedback">Feedback</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="faq">FAQ</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="email_verification">EMAIL\nVERIFICATION</string>
    <string name="email_verification_subtitle">Please check your Email address\n to verify password reset</string>
    <string name="mail_icon">Mail Icon</string>
    <string name="via_mail">via mail:</string>
    <string name="support_email">support@gmail.com</string>
    <string name="next">Next</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password_title">FORGET\nPASSWORD</string>
    <string name="forgot_password_subtitle">Provide your account’s email for which you want\n to reset your password!</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email">Enter your email</string>
    <string name="new_password_title">New Password</string>
    <string name="new_password_subtitle">Verification Complete\nPlease set your new password.</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reenter_password">Re-enter your new password</string>
    <string name="notifications">Notification</string>
    <string name="account">Account</string>
    <string name="report_bug">Report Bug</string>
    <string name="basic_photography">Basic Photography</string>
    <string name="illustrations">Illustrations</string>
    <string name="video">Video</string>
    <string name="previous">Previous</string>
    <string name="medium_shot">Medium Shot</string>
    <string name="high_angle_shot">High Angle Shot</string>
    <string name="high_angle_description">A shot taken from a high distance.</string>
    <string name="welcome">Welcome,</string>
    <string name="daily_task">Daily Task</string>
    <string name="complete_15_chapters">Complete 15 chapters</string>
    <string name="chapters_to_go">8 chapters to go</string>
    <string name="available_courses">Available Courses</string>
    <string name="photography_card">Photography Card</string>
    <string name="challenges_card">Challenges Card</string>
    <string name="tip_of_day">Tip of the Day:</string>
    <string name="tip_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="my_course">My Course</string>
    <string name="dropdown">Dropdown</string>
    <string name="available">Available</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="empty_state">Empty State</string>
    <string name="no_content_available">No Content Available</string>
    <string name="nothing_here">Looks like theres nothing here yet.</string>
    <string name="new_challenge">📷 New Challenge Available!</string>
    <string name="challenge_description">Check out the latest photography challenge now.</string>
    <string name="tip_title">📢 Tip of the Day!</string>
    <string name="tip_description">Use natural lighting to enhance your subject features.</string>

    <string name="profile_image">Profile Image</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="posts">Posts</string>
    <string name="posts_count">15</string>
    <string name="followers">Followers</string>
    <string name="followers_count">120</string>
    <string name="following">Following</string>
    <string name="following_count">80</string>
    <string name="share_photo">Share a Photo</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="photo_preview">Photo Preview</string>
    <string name="core_one">Core One</string>

    <string name="first_name_hint">First name</string>
    <string name="middle_name_hint">Middle name</string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="play_video">Play Video</string>


    <string name="photography_challenges">Photography Challenges</string>
    <string name="difficulty_levels">Difficulty Levels</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="available_challenges">Available Challenges</string>
    <string name="sample_challenge">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="camera_icon">Camera icon</string>


</resources>
